Development
    Add Turkish translation by Onur Küçük
    Rework vf patch a little
    Add scale video filter when we add yadif video filter
    Use the video filter yadif by default, but give user the option of disabling it via command line or via preferences
    For dvdnav:// media, add the -nocache option to the mplayer startup command
    Add --reallyverbose command line option, to help with debugging
	Couple of minor cleanups
	Updated pt_BR translation
        Added a new config option to the 'Preferences | Language Settings' tab to allow for locale encoding settings for metadata
        Handle keyboard events when running in DVD w/menu mode to allow arrow and enter key usage
	Make double clicking on playlist item work a little better
	Added Cantonise and Taiwanise translations by hailan
	Make sure DVD chapter length is right in display (makes episode DVDs display better)
	Use icon from panana as found at
		http://www.gnome-look.org/content/show.php/Gnome-mplayer+icon?content=77766
		license is GPL on image
	Added some sr and sr@latin translations to .desktop file
	Fix assertion when switching videos
	Change control bar to use GTK Buttons over custom widgets
	Allow pause/unpause on single click
	For the zh_TW locale convert from BIG5 to UTF-8 rather than locale to UTF-8
0.6.2
	Updated French translation
	Updated Polish and Korean translations
	When playing DVD's with navigation, add menu button to left hand side
	Only draw black background when we have video present
	When stopping streaming media, kill the stream when stop clicked rather than pausing it
	Change menu slide away to a timeout from a loop
	Added patch for quit on complete option to command line
	Resize patch from Diogo
	When hiding controls, keep playback window the same size, when not fullscreen or embedded
	Fix problem with 'Save As..' where filename started with a /
	Updated French translation
	Only show audio channels in file details when not 0